fix(responsive): :bug: fix issue with horizontal scroll

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,5 +55,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    @apply overflow-x-hidden;
   }
 }
